--- a/templates/index.html
+++ b/templates/index.html
@@ -67,8 +67,8 @@
                   <img class="card-img rounded-0" src="{% static popular_post.image_url %}" alt="">
                 </div>
                 <div class="blog__slide__content">
-                  <h3><a href="#">New york fashion week's continued the evolution</a></h3>
-                  <p>2 days ago</p>
+                  <h3><a href="#">{{ popular_post.title }}</a></h3>
+                  <p>{{ popular_post.published_at }}</p>
                 </div>
               </div>
             </div>
