--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
             <div class="flex-fill" style="margin-right: 30px;">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
-                  {% if fresh_post.image_url %}
+                  {% if popular_post.image_url %}
                     <img class="card-img rounded-0" src="{% static popular_post.image_url %}" alt="">
                   {% else %}
                     <img class="img-fluid" src="{% static "img/banner/blog.png" %}" alt="">
@@ -95,7 +95,7 @@
                   {% else %}
                     <img class="img-fluid" src="{% static "img/banner/blog.png" %}" alt="">
                   {% endif %}
-                  <ul class="thumb-info">
+                  <ul class="thumb-info" style="max-width:550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ fresh_post.author }}</a></li>
                     <li><a href="#"><i class="ti-notepad"></i>{{ fresh_post.published_at }}</a></li>
                     <li><a href="#"><i class="ti-themify-favicon"></i>{{ fresh_post.comments_amount }}</a></li>
