--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,6 +1,8 @@
 {% extends 'blog-base.html' %}
 {% load static %}
 
+{% block title %}Blog Details{% endblock %}
+
 {% block content %}
   <!--================ Hero sm Banner start =================-->      
   <section class="mb-30px">
