--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,8 @@
 {% extends 'blog-base.html' %}
 {% load static %}
 
+{% block title %}Contact{% endblock %}
+
 {% block content %}
   <!--================ Hero sm banner start =================-->  
   <section class="mb-30px">
