--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'blog-base.html' %}
 {% load static %}
 
+{% block title %}Home{% endblock %}
+
 {% block content %}
   <main class="site-main">
     <!--================Hero Banner start =================-->  
