--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
                   {% if popular_post.image_url %}
-                    <img class="card-img rounded-0" src="{% static popular_post.image_url %}" alt="">
+                    <img class="card-img rounded-0" src={{ popular_post.image_url }} alt="">
                   {% else %}
                     <img class="img-fluid" src="{% static "img/banner/blog.png" %}" alt="">
                   {% endif %}
@@ -54,7 +54,7 @@
               <div class="single-recent-blog-post">
                 <div class="thumb">
                   {% if fresh_post.image_url %}
-                    <img class="img-fluid" src="{% static fresh_post.image_url %}" alt="">
+                    <img class="img-fluid" src={{ fresh_post.image_url }} alt="">
                   {% else %}
                     <img class="img-fluid" src="{% static "img/banner/blog.png" %}" alt="">
                   {% endif %}
